# golf-app

./: .anvil_editor.yaml  .replit  anvil.yaml  manage.py  pyproject.toml  replit.md  reset_admin.sh
client_code/About/: __init__.py  form_template.yaml
client_code/Contact/: __init__.py  form_template.yaml
client_code/EntryEdit/: __init__.py
client_code/EntryView/: __init__.py  form_template.yaml
client_code/EntryView/DetailedView/: __init__.py  form_template.yaml
client_code/Form1/: __init__.py
client_code/Form2/: form_template.yaml
client_code/Homepage/: __init__.py  form_template.yaml
client_code/Homepage/Form2/: __init__.py  form_template.yaml
client_code/Homepage/ItemTemplate1/: __init__.py
client_code/Homepage_copy/: __init__.py  form_template.yaml
client_code/course_list/: __init__.py  form_template.yaml
client_code/courses_page/: __init__.py  form_template.yaml
client_code/navlist/: __init__.py  form_template.yaml
client_code/template_page/: __init__.py  form_template.yaml
courses/: admin.py  models.py  tests.py
courses/management/commands/: load_demo_data.py  seed_demo_data.py
courses/migrations/: 0001_initial.py  0002_scrapelog.py  0002_seed_demo_data.py
frontend/: admin_views.py  views.py
frontend/templates/frontend/: admin_dashboard.html  admin_login.html  base.html  course_detail.html  course_detail_modal.html  course_list.html
golf_registry/: asgi.py  settings.py  urls.py  wsgi.py
scraper/: models.py  search_and_scrape.py
scraper/management/commands/: scrape_courses.py  (+1 more)
server_code/: ServerModule1.py
